// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CTableHeaderCell customize 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="table-info bazinga"
      >
        Test
      </th>
    </tr>
  </thead>
</table>
`;

exports[`loads and displays CTableHeaderCell component 1`] = `
<table>
  <thead>
    <tr>
      <th />
    </tr>
  </thead>
</table>
`;
